<resources>
    <string name="app_name">InstantCMS Client Lite</string>
    <string name="app_logo">Logo</string>
    <string name="app_login">Войти</string>
    <string name="app_settings">Настроки</string>
    <string name="app_messages">Сообщения</string>
    <string name="app_retry">Повторить</string>
    <string name="action_sign_in">Войти</string>
    <string name="prompt_password">Пароль</string>
    <string name="prompt_email">Логин или E-Mail</string>
    <string name="wrongLoginData">Неверный логин или пароль</string>
    <string name="app_need_auth">Для выполнения данного действия требуется авторизация</string>
    <string name="app_logout">Выход</string>
</resources>
