<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MessagesActivity">

    <LinearLayout
        android:id="@+id/messagesLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:id="@+id/messageLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/messageBackButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:background="@color/colorHeaderBG"
                android:contentDescription="@string/app_settings"
                app:srcCompat="@drawable/ic_backaction" />

            <ImageView
                android:id="@+id/message_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:background="@color/colorHeaderBG"
                android:contentDescription="@string/app_logo"
                app:srcCompat="@drawable/logo" />

        </LinearLayout>
        <RelativeLayout
            android:id="@+id/message_progress_bar_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="visible">

            <ProgressBar
                android:id="@+id/message_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:visibility="visible" />


            <LinearLayout
                android:id="@+id/mlilPolicy"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/messageErrorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/merrorIcon"
                    android:layout_width="76dp"
                    android:layout_height="65dp"
                    android:layout_gravity="center_horizontal"
                    android:contentDescription="@android:string/httpErrorBadUrl"
                    app:srcCompat="@drawable/ic_error_icon" />

                <TextView
                    android:id="@+id/merrorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textColor="#FF0000" />

                <Button
                    android:id="@+id/mretry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/app_retry" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/mlilPolicy2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

            </LinearLayout>
        </RelativeLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/messageContentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone" >
            <LinearLayout
                android:id="@+id/messageContentSubContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >
                <ScrollView
                    android:id="@+id/messagesScroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9">

                    <LinearLayout
                        android:id="@+id/messagesList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="0dp"
                        android:orientation="vertical">

                    </LinearLayout>

                </ScrollView>

                <LinearLayout
                    android:id="@+id/messagePaginator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.1"
                    android:orientation="horizontal" />
            </LinearLayout>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>